2002-04-21  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextiter.c (gtk_text_iter_forward_search): More verbose
	description of match_start and match_end return values.  (#57929)

	* gtk/gtktreeselection.c (_gtk_tree_selection_internal_select_node):
	* gtk/gtktreeview.c (_gtk_tree_view_column_autosize): Remove doc
	comment markers on freeform comments.

	* gtk/gtktreemodelsort.c
	(gtk_tree_model_sort_convert_path_to_child_path): Doc fixes. (#68404)

Sat Apr 20 21:15:11 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkmenuitem.c: add "selected_shadow_type" style property

Sat Apr 20 12:07:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_modify_color_component): Accept
	NULL for color to mean "unmodify"

	* gtk/gtkwidget.c (gtk_widget_modify_font): Accept NULL for
	font_desc to mean "unmodify".

Sat Apr 20 16:49:26 2002  Kristian Rietveld  <kris@gtk.org>

	* gdk/x11/gdkpixmap-x11.c (gdk_pixmap_new): replace GDK_IS_WINDOW
	with GDK_IS_DRAWABLE in the assert, only check GDK_WINDOW_DESTROYED
	if window is a GdkWindow,
	(gdk_bitmap_create_from_data): ditto,
	(gdk_pixmap_create_from_data): ditto

Fri Apr 19 23:38:16 2002  Kristian Rietveld  <kris@gtk.org>

	Fixes #50310.

	* gtk/gtktreeprivate.h: add _gtk_tree_view_column_autosize

	* gtk/gtktreeview.c: privately export _gtk_tree_view_column_autosize,
	and add a small note about that function,
	(gtk_tree_view_button_press): check for double click and
	"not having an autosize" column before autosizing the column,
	
	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_min_width):
	call _gtk_tree_view_column_autosize to update autosized column width
	(gtk_tree_view_column_set_max_width): ditto

2002-04-20  Matthias Clasen  <maclas@gmx.de>

	* TODO, TODO.xml, README.nanox, docs/Changes-1.2.txt,
	docs/Changes-2.0.txt, docs/gtk-config.txt, docs/debugging.txt,
	gdk/TODO: Remove some files whose content is either obsolete or
	has been moved elsewhere.
