@@ -1,3 +1,12 @@
+2002-04-21  Alexander Larsson  <alla@lysator.liu.se>
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_reparent):
+	Save x and y in window_private.
+
+	* gtk/gtkplug.c (_gtk_plug_add_to_socket):
+	Move plug window outside the visible area to avoid flashing until
+	the first size_allocate.
+
 2002-04-21  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktextiter.c (gtk_text_iter_forward_search): More verbose
